--- a/resume.tex
+++ b/resume.tex
@@ -28,6 +28,7 @@
 \input{cv/experience.tex}
 \input{cv/projects.tex}
 \input{cv/codingprofiletwo.tex}
+\input{cv/certifications.tex}
 \input{cv/skills.tex}
 \vspace*{-1cm}%\fill}
 \end{document}
