--- a/cv/certifications.tex
+++ b/cv/certifications.tex
@@ -1,33 +1,39 @@
-%-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsection{CERTIFICATIONS AND COURSES}
+\cvsection{CERTIFIED COURSES}
 
-%-------------------------------------------------------------------------------
-%CONTENT
-%-------------------------------------------------------------------------------
-\begin{cvskills}
-%---------------------------------------------------------
-    \cvskill
-    { {Design Databases With PostgreSQL Skill Path}-  \href{https://www.codecademy.com/enrolled/paths/design-databases-with-postgresql}{\color{blue}Codecademy}} % Award
-    % {\textit{Arizona State University} | Arizona, USA  {\bf 4.0/4.0}} % Event
-    {Nov 2024} % Date(s)
-%---------------------------------------------------------
-  \cvskill
-    { {Learn Data Structures and Algorithms with Python} \textit{}- \href{https://www.codecademy.com/learn/learn-data-structures-and-algorithms-with-python}{\color{blue}Codecademy}} % Award
-    % {\textit{Arizona State University} | Arizona, USA  {\bf 4.0/4.0}} % Event
-    {Nov 2024} % Date(s)
-
-%---------------------------------------------------------
-  \cvskill
-    { {Learn Git and Github}, \textit{}- \href{https://www.codecademy.com/enrolled/courses/learn-git}{\color{blue}Codecademy}} % Award
-    % {\textit{Arizona State University} | Arizona, USA  {\bf 4.0/4.0}} % Event
-    {Nov 2024} % Date(s)
-%---------------------------------------------------------
-  \cvskill
-    { {Responsive Web Design}-  \href{https://www.freecodecamp.org/fcce5fcfa09-1a62-4f93-ab40-cdc329e7d433}{\color{blue}FreeCodeCamp}} % Award
-    % {\textit{Arizona State University} | Arizona, USA  {\bf 4.0/4.0}} % Event
-    {Apr 2020} % Date(s)
-%---------------------------------------------------------
-
-\end{cvskills}
+\begin{envcvcerts}
+  \cvcerts
+    {Become a RESTful API Developer}
+    {Feb 2025}
+    {Linkedin}
+    {6Hrs 29Min}
+  \cvcerts
+    {Complete Guide to Apache Kafka for Beginners}
+    {Feb 2025}
+    {Linkedin}
+    {8Hrs 13Min}
+  \cvcerts
+    {Learn CSS}
+    {Feb 2025}
+    {Linkedin}
+    {26Hrs}
+  \cvcerts
+    {Design Databases With PostgreSQL Skill Path}
+    {Nov 2024}
+    {Codecademy}
+    {13Hrs}
+  \cvcerts
+    {Learn Data Structures and Algorithms with Python}
+    {Nov 2024}
+    {Codecademy}
+    {26Hrs}
+  \cvcerts
+    {Learn Git \& GitHub Course}
+    {Nov 2024}
+    {Codecademy}
+    {4Hrs}
+  \cvcerts
+    {Legacy JavaScript Algorithms and Data Structures}
+    {Mar 2020}
+    {Freecodecademy}
+    {30Hrs}
+\end{envcvcerts}
